--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
     "npm-run-all": "4.0.2"
   },
   "dependencies": {
-    "polymath-auth": "0.1.7",
-    "polymath.js_v2": "0.1.8",
-    "polymath-ui": "0.1.7",
+    "axios": "^0.18.0",
+    "bignumber.js": "^5.0.0",
     "carbon-components": "^8.16.8",
     "carbon-components-react": "^5.31.0",
     "carbon-icons": "^6.3.2",
-    "bignumber.js": "^5.0.0",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-15": "^1.0.5",
     "jest-enzyme": "^4.0.1",
     "moment": "2.20.1",
     "normalize.css": "7.0.0",
+    "polymath-auth": "0.1.7",
+    "polymath-ui": "0.1.7",
+    "polymath.js_v2": "0.1.8",
     "prop-types": "15.6.0",
     "react": "15.6.2",
     "react-addons-css-transition-group": "15.0.1",
@@ -48,7 +49,7 @@
     "web3": "1.0.0-beta.30"
   },
   "scripts": {
-    "start-js": "react-scripts start",
+    "start-js": "PORT=5000 react-scripts start",
     "start-lint": "esw -w --fix src",
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
