--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "polymath-boilerplate",
+  "name": "polymath-sto-app",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
     "custom-react-scripts": "0.2.1",
     "eslint": "4.11.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
     "eslint-plugin-polymath-react": "github:PolymathNetwork/eslint-plugin-polymath-react#master",
+    "eslint-plugin-react": "7.4.0",
     "eslint-watch": "3.1.3",
     "husky": "0.14.3",
     "jsdom": "11.6.2",
@@ -19,17 +19,17 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bignumber.js": "^5.0.0",
-    "carbon-components": "^8.16.8",
-    "carbon-components-react": "^5.31.0",
+    "carbon-components": "^8.18.0",
+    "carbon-components-react": "^5.34.0",
     "carbon-icons": "^6.3.2",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-15": "^1.0.5",
     "jest-enzyme": "^4.0.1",
-    "moment": "2.20.1",
+    "moment": "^2.20.1",
     "normalize.css": "7.0.0",
-    "polymath-auth": "0.1.7",
-    "polymath-ui": "0.1.7",
-    "polymath.js_v2": "0.1.8",
+    "polymath-auth": "^0.1.7",
+    "polymath-ui": "^0.1.9",
+    "polymath.js_v2": "^0.2.8",
     "prop-types": "15.6.0",
     "react": "15.6.2",
     "react-addons-css-transition-group": "15.0.1",
