--- a/package.json
+++ b/package.json
@@ -1,41 +1,44 @@
 {
-  "name": "polymath-sto-app",
+  "name": "polymath-investorportal",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "custom-react-scripts": "0.2.1",
+    "custom-react-scripts": "0.2.2",
     "eslint": "4.11.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-polymath-react": "github:PolymathNetwork/eslint-plugin-polymath-react#master",
     "eslint-plugin-react": "7.4.0",
     "eslint-watch": "3.1.3",
+    "flow-bin": "0.68.0",
     "husky": "0.14.3",
+    "jest": "22.4.2",
     "jsdom": "11.6.2",
     "jsdom-global": "3.0.2",
     "lint-staged": "5.0.0",
     "node-sass-chokidar": "0.0.2",
-    "npm-run-all": "4.0.2"
+    "npm-run-all": "4.0.2",
+    "truffle": "^4.1.3"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "bignumber.js": "^5.0.0",
-    "carbon-components": "^8.18.2",
-    "carbon-components-react": "^5.38.2",
-    "carbon-icons": "^6.3.2",
+    "babel-eslint": "^8.2.2",
+    "bignumber.js": "^6.0.0",
+    "carbon-components": "8.16.8",
+    "carbon-components-react": "5.31.1",
+    "carbon-icons": "6.3.2",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-15": "^1.0.5",
     "jest-enzyme": "^4.0.1",
-    "moment": "^2.21.0",
+    "moment": "2.20.1",
     "normalize.css": "7.0.0",
-    "polymath-auth": "^0.1.7",
-    "polymath-ui": "^0.1.10",
-    "polymath.js_v2": "^0.2.10",
-    "prop-types": "15.6.0",
-    "react": "15.6.2",
+    "polymath-auth": "^0.2.3",
+    "polymath-ui": "^0.2.6",
+    "polymathjs": "^0.4.2",
+    "prop-types": "^15.6.1",
+    "react": "16.2.0",
     "react-addons-css-transition-group": "15.0.1",
     "react-copy-to-clipboard": "5.0.1",
     "react-document-title": "2.0.3",
-    "react-dom": "15.5.4",
+    "react-dom": "16.2.0",
     "react-redux": "5.0.6",
     "react-router": "4.2.0",
     "react-router-config": "1.0.0-beta.4",
